src/syntax.output
Terminals unused in grammar

    AND
    OR
    NON
    AFFECT


State 21 conflicts: 1 shift/reduce


Grammar

    0 $accept: programme $end

    1 programme: BEGIN_PROJECT T_IDF SEMI contenu END_PROJECT SEMI

    2 contenu: SETUP_BLOCK RUN_BLOCK
    3        | RUN_BLOCK

    4 SETUP_BLOCK: SETUP COLON declarations

    5 RUN_BLOCK: RUN COLON LBRACE instructions RBRACE

    6 declarations: declaration declarations
    7             | ε

    8 declaration: DEFINE idfs COLON type SEMI
    9            | DEFINE T_IDF COLON type EXPECT expression SEMI
   10            | DEFINE T_IDF COLON LBRACKET type SEMI T_ENTIER RBRACKET SEMI
   11            | CONST T_IDF COLON type EXPECT expression SEMI

   12 idfs: T_IDF

   13 $@1: ε

   14 idfs: T_IDF $@1 PIPE idfs

   15 type: INTEGER
   16     | FLOAT

   17 instructions: instruction instructions
   18             | ε

   19 instruction: T_IDF COMP_AFFECT expression SEMI
   20            | construct_if
   21            | construct_while
   22            | construct_for
   23            | in_out

   24 in_out: IN LPAREN T_IDF RPAREN SEMI
   25       | OUT LPAREN T_CHAINE COMMA T_IDF RPAREN SEMI

   26 expression: T_ENTIER
   27           | T_FLOAT
   28           | T_IDF
   29           | expression PLUS expression
   30           | expression MINUS expression
   31           | expression MULT expression
   32           | expression DIV expression

   33 construct_if: IF LPAREN condition RPAREN THEN COLON LBRACE instructions RBRACE else_block ENDIF SEMI

   34 else_block: ELSE LBRACE instructions RBRACE
   35           | ε

   36 construct_while: LOOP WHILE LPAREN condition RPAREN LBRACE instructions RBRACE ENDLOOP SEMI

   37 construct_for: FOR T_IDF IN T_ENTIER TO T_ENTIER LBRACE instructions RBRACE ENDFOR SEMI

   38 condition: expression EXPECT expression
   39          | expression COMP_EQ expression
   40          | expression COMP_NEQ expression
   41          | expression COMP_GT expression
   42          | expression COMP_LT expression
   43          | expression COMP_GE expression
   44          | expression COMP_LE expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BEGIN_PROJECT (258) 1
    END_PROJECT (259) 1
    SETUP (260) 4
    RUN (261) 5
    DEFINE (262) 8 9 10
    CONST (263) 11
    INTEGER (264) 15
    FLOAT (265) 16
    IF (266) 33
    THEN (267) 33
    ELSE (268) 34
    ENDIF (269) 33
    LOOP (270) 36
    WHILE (271) 36
    ENDLOOP (272) 36
    FOR (273) 37
    IN (274) 24 37
    TO (275) 37
    ENDFOR (276) 37
    OUT (277) 25
    AND (278)
    OR (279)
    NON (280)
    AFFECT (281)
    COMP_GE (282) 43
    EXPECT (283) 9 11 38
    COMP_LE (284) 44
    COMP_EQ (285) 39
    COMP_NEQ (286) 40
    COMP_GT (287) 41
    COMP_LT (288) 42
    COMP_AFFECT (289) 19
    PLUS (290) 29
    MINUS (291) 30
    MULT (292) 31
    DIV (293) 32
    SEMI (294) 1 8 9 10 11 19 24 25 33 36 37
    COLON (295) 4 5 8 9 10 11 33
    COMMA (296) 25
    PIPE (297) 14
    LPAREN (298) 24 25 33 36
    RPAREN (299) 24 25 33 36
    LBRACE (300) 5 33 34 36 37
    RBRACE (301) 5 33 34 36 37
    LBRACKET (302) 10
    RBRACKET (303) 10
    T_ENTIER <entier> (304) 10 26 37
    T_FLOAT <reel> (305) 27
    T_IDF <str> (306) 1 9 10 11 12 14 19 24 25 28 37
    T_CHAINE <str> (307) 25


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    programme (54)
        on left: 1
        on right: 0
    contenu (55)
        on left: 2 3
        on right: 1
    SETUP_BLOCK (56)
        on left: 4
        on right: 2
    RUN_BLOCK (57)
        on left: 5
        on right: 2 3
    declarations (58)
        on left: 6 7
        on right: 4 6
    declaration (59)
        on left: 8 9 10 11
        on right: 6
    idfs (60)
        on left: 12 14
        on right: 8 14
    $@1 (61)
        on left: 13
        on right: 14
    type (62)
        on left: 15 16
        on right: 8 9 10 11
    instructions (63)
        on left: 17 18
        on right: 5 17 33 34 36 37
    instruction (64)
        on left: 19 20 21 22 23
        on right: 17
    in_out (65)
        on left: 24 25
        on right: 23
    expression (66)
        on left: 26 27 28 29 30 31 32
        on right: 9 11 19 29 30 31 32 38 39 40 41 42 43 44
    construct_if (67)
        on left: 33
        on right: 20
    else_block (68)
        on left: 34 35
        on right: 33
    construct_while (69)
        on left: 36
        on right: 21
    construct_for (70)
        on left: 37
        on right: 22
    condition (71)
        on left: 38 39 40 41 42 43 44
        on right: 33 36


State 0

    0 $accept: • programme $end

    BEGIN_PROJECT  shift, and go to state 1

    programme  go to state 2


State 1

    1 programme: BEGIN_PROJECT • T_IDF SEMI contenu END_PROJECT SEMI

    T_IDF  shift, and go to state 3


State 2

    0 $accept: programme • $end

    $end  shift, and go to state 4


State 3

    1 programme: BEGIN_PROJECT T_IDF • SEMI contenu END_PROJECT SEMI

    SEMI  shift, and go to state 5


State 4

    0 $accept: programme $end •

    $default  accept


State 5

    1 programme: BEGIN_PROJECT T_IDF SEMI • contenu END_PROJECT SEMI

    SETUP  shift, and go to state 6
    RUN    shift, and go to state 7

    contenu      go to state 8
    SETUP_BLOCK  go to state 9
    RUN_BLOCK    go to state 10


State 6

    4 SETUP_BLOCK: SETUP • COLON declarations

    COLON  shift, and go to state 11


State 7

    5 RUN_BLOCK: RUN • COLON LBRACE instructions RBRACE

    COLON  shift, and go to state 12


State 8

    1 programme: BEGIN_PROJECT T_IDF SEMI contenu • END_PROJECT SEMI

    END_PROJECT  shift, and go to state 13


State 9

    2 contenu: SETUP_BLOCK • RUN_BLOCK

    RUN  shift, and go to state 7

    RUN_BLOCK  go to state 14


State 10

    3 contenu: RUN_BLOCK •

    $default  reduce using rule 3 (contenu)


State 11

    4 SETUP_BLOCK: SETUP COLON • declarations

    DEFINE  shift, and go to state 15
    CONST   shift, and go to state 16

    $default  reduce using rule 7 (declarations)

    declarations  go to state 17
    declaration   go to state 18


State 12

    5 RUN_BLOCK: RUN COLON • LBRACE instructions RBRACE

    LBRACE  shift, and go to state 19


State 13

    1 programme: BEGIN_PROJECT T_IDF SEMI contenu END_PROJECT • SEMI

    SEMI  shift, and go to state 20


State 14

    2 contenu: SETUP_BLOCK RUN_BLOCK •

    $default  reduce using rule 2 (contenu)


State 15

    8 declaration: DEFINE • idfs COLON type SEMI
    9            | DEFINE • T_IDF COLON type EXPECT expression SEMI
   10            | DEFINE • T_IDF COLON LBRACKET type SEMI T_ENTIER RBRACKET SEMI

    T_IDF  shift, and go to state 21

    idfs  go to state 22


State 16

   11 declaration: CONST • T_IDF COLON type EXPECT expression SEMI

    T_IDF  shift, and go to state 23


State 17

    4 SETUP_BLOCK: SETUP COLON declarations •

    $default  reduce using rule 4 (SETUP_BLOCK)


State 18

    6 declarations: declaration • declarations

    DEFINE  shift, and go to state 15
    CONST   shift, and go to state 16

    $default  reduce using rule 7 (declarations)

    declarations  go to state 24
    declaration   go to state 18


State 19

    5 RUN_BLOCK: RUN COLON LBRACE • instructions RBRACE

    IF     shift, and go to state 25
    LOOP   shift, and go to state 26
    FOR    shift, and go to state 27
    IN     shift, and go to state 28
    OUT    shift, and go to state 29
    T_IDF  shift, and go to state 30

    $default  reduce using rule 18 (instructions)

    instructions     go to state 31
    instruction      go to state 32
    in_out           go to state 33
    construct_if     go to state 34
    construct_while  go to state 35
    construct_for    go to state 36


State 20

    1 programme: BEGIN_PROJECT T_IDF SEMI contenu END_PROJECT SEMI •

    $default  reduce using rule 1 (programme)


State 21

    9 declaration: DEFINE T_IDF • COLON type EXPECT expression SEMI
   10            | DEFINE T_IDF • COLON LBRACKET type SEMI T_ENTIER RBRACKET SEMI
   12 idfs: T_IDF •
   14     | T_IDF • $@1 PIPE idfs

    COLON  shift, and go to state 37

    COLON     [reduce using rule 12 (idfs)]
    $default  reduce using rule 13 ($@1)

    $@1  go to state 38


State 22

    8 declaration: DEFINE idfs • COLON type SEMI

    COLON  shift, and go to state 39


State 23

   11 declaration: CONST T_IDF • COLON type EXPECT expression SEMI

    COLON  shift, and go to state 40


State 24

    6 declarations: declaration declarations •

    $default  reduce using rule 6 (declarations)


State 25

   33 construct_if: IF • LPAREN condition RPAREN THEN COLON LBRACE instructions RBRACE else_block ENDIF SEMI

    LPAREN  shift, and go to state 41


State 26

   36 construct_while: LOOP • WHILE LPAREN condition RPAREN LBRACE instructions RBRACE ENDLOOP SEMI

    WHILE  shift, and go to state 42


State 27

   37 construct_for: FOR • T_IDF IN T_ENTIER TO T_ENTIER LBRACE instructions RBRACE ENDFOR SEMI

    T_IDF  shift, and go to state 43


State 28

   24 in_out: IN • LPAREN T_IDF RPAREN SEMI

    LPAREN  shift, and go to state 44


State 29

   25 in_out: OUT • LPAREN T_CHAINE COMMA T_IDF RPAREN SEMI

    LPAREN  shift, and go to state 45


State 30

   19 instruction: T_IDF • COMP_AFFECT expression SEMI

    COMP_AFFECT  shift, and go to state 46


State 31

    5 RUN_BLOCK: RUN COLON LBRACE instructions • RBRACE

    RBRACE  shift, and go to state 47


State 32

   17 instructions: instruction • instructions

    IF     shift, and go to state 25
    LOOP   shift, and go to state 26
    FOR    shift, and go to state 27
    IN     shift, and go to state 28
    OUT    shift, and go to state 29
    T_IDF  shift, and go to state 30

    $default  reduce using rule 18 (instructions)

    instructions     go to state 48
    instruction      go to state 32
    in_out           go to state 33
    construct_if     go to state 34
    construct_while  go to state 35
    construct_for    go to state 36


State 33

   23 instruction: in_out •

    $default  reduce using rule 23 (instruction)


State 34

   20 instruction: construct_if •

    $default  reduce using rule 20 (instruction)


State 35

   21 instruction: construct_while •

    $default  reduce using rule 21 (instruction)


State 36

   22 instruction: construct_for •

    $default  reduce using rule 22 (instruction)


State 37

    9 declaration: DEFINE T_IDF COLON • type EXPECT expression SEMI
   10            | DEFINE T_IDF COLON • LBRACKET type SEMI T_ENTIER RBRACKET SEMI

    INTEGER   shift, and go to state 49
    FLOAT     shift, and go to state 50
    LBRACKET  shift, and go to state 51

    type  go to state 52


State 38

   14 idfs: T_IDF $@1 • PIPE idfs

    PIPE  shift, and go to state 53


State 39

    8 declaration: DEFINE idfs COLON • type SEMI

    INTEGER  shift, and go to state 49
    FLOAT    shift, and go to state 50

    type  go to state 54


State 40

   11 declaration: CONST T_IDF COLON • type EXPECT expression SEMI

    INTEGER  shift, and go to state 49
    FLOAT    shift, and go to state 50

    type  go to state 55


State 41

   33 construct_if: IF LPAREN • condition RPAREN THEN COLON LBRACE instructions RBRACE else_block ENDIF SEMI

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 59
    condition   go to state 60


State 42

   36 construct_while: LOOP WHILE • LPAREN condition RPAREN LBRACE instructions RBRACE ENDLOOP SEMI

    LPAREN  shift, and go to state 61


State 43

   37 construct_for: FOR T_IDF • IN T_ENTIER TO T_ENTIER LBRACE instructions RBRACE ENDFOR SEMI

    IN  shift, and go to state 62


State 44

   24 in_out: IN LPAREN • T_IDF RPAREN SEMI

    T_IDF  shift, and go to state 63


State 45

   25 in_out: OUT LPAREN • T_CHAINE COMMA T_IDF RPAREN SEMI

    T_CHAINE  shift, and go to state 64


State 46

   19 instruction: T_IDF COMP_AFFECT • expression SEMI

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 65


State 47

    5 RUN_BLOCK: RUN COLON LBRACE instructions RBRACE •

    $default  reduce using rule 5 (RUN_BLOCK)


State 48

   17 instructions: instruction instructions •

    $default  reduce using rule 17 (instructions)


State 49

   15 type: INTEGER •

    $default  reduce using rule 15 (type)


State 50

   16 type: FLOAT •

    $default  reduce using rule 16 (type)


State 51

   10 declaration: DEFINE T_IDF COLON LBRACKET • type SEMI T_ENTIER RBRACKET SEMI

    INTEGER  shift, and go to state 49
    FLOAT    shift, and go to state 50

    type  go to state 66


State 52

    9 declaration: DEFINE T_IDF COLON type • EXPECT expression SEMI

    EXPECT  shift, and go to state 67


State 53

   14 idfs: T_IDF $@1 PIPE • idfs

    T_IDF  shift, and go to state 68

    idfs  go to state 69


State 54

    8 declaration: DEFINE idfs COLON type • SEMI

    SEMI  shift, and go to state 70


State 55

   11 declaration: CONST T_IDF COLON type • EXPECT expression SEMI

    EXPECT  shift, and go to state 71


State 56

   26 expression: T_ENTIER •

    $default  reduce using rule 26 (expression)


State 57

   27 expression: T_FLOAT •

    $default  reduce using rule 27 (expression)


State 58

   28 expression: T_IDF •

    $default  reduce using rule 28 (expression)


State 59

   29 expression: expression • PLUS expression
   30           | expression • MINUS expression
   31           | expression • MULT expression
   32           | expression • DIV expression
   38 condition: expression • EXPECT expression
   39          | expression • COMP_EQ expression
   40          | expression • COMP_NEQ expression
   41          | expression • COMP_GT expression
   42          | expression • COMP_LT expression
   43          | expression • COMP_GE expression
   44          | expression • COMP_LE expression

    COMP_GE   shift, and go to state 72
    EXPECT    shift, and go to state 73
    COMP_LE   shift, and go to state 74
    COMP_EQ   shift, and go to state 75
    COMP_NEQ  shift, and go to state 76
    COMP_GT   shift, and go to state 77
    COMP_LT   shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    MULT      shift, and go to state 81
    DIV       shift, and go to state 82


State 60

   33 construct_if: IF LPAREN condition • RPAREN THEN COLON LBRACE instructions RBRACE else_block ENDIF SEMI

    RPAREN  shift, and go to state 83


State 61

   36 construct_while: LOOP WHILE LPAREN • condition RPAREN LBRACE instructions RBRACE ENDLOOP SEMI

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 59
    condition   go to state 84


State 62

   37 construct_for: FOR T_IDF IN • T_ENTIER TO T_ENTIER LBRACE instructions RBRACE ENDFOR SEMI

    T_ENTIER  shift, and go to state 85


State 63

   24 in_out: IN LPAREN T_IDF • RPAREN SEMI

    RPAREN  shift, and go to state 86


State 64

   25 in_out: OUT LPAREN T_CHAINE • COMMA T_IDF RPAREN SEMI

    COMMA  shift, and go to state 87


State 65

   19 instruction: T_IDF COMP_AFFECT expression • SEMI
   29 expression: expression • PLUS expression
   30           | expression • MINUS expression
   31           | expression • MULT expression
   32           | expression • DIV expression

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80
    MULT   shift, and go to state 81
    DIV    shift, and go to state 82
    SEMI   shift, and go to state 88


State 66

   10 declaration: DEFINE T_IDF COLON LBRACKET type • SEMI T_ENTIER RBRACKET SEMI

    SEMI  shift, and go to state 89


State 67

    9 declaration: DEFINE T_IDF COLON type EXPECT • expression SEMI

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 90


State 68

   12 idfs: T_IDF •
   14     | T_IDF • $@1 PIPE idfs

    PIPE      reduce using rule 13 ($@1)
    $default  reduce using rule 12 (idfs)

    $@1  go to state 38


State 69

   14 idfs: T_IDF $@1 PIPE idfs •

    $default  reduce using rule 14 (idfs)


State 70

    8 declaration: DEFINE idfs COLON type SEMI •

    $default  reduce using rule 8 (declaration)


State 71

   11 declaration: CONST T_IDF COLON type EXPECT • expression SEMI

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 91


State 72

   43 condition: expression COMP_GE • expression

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 92


State 73

   38 condition: expression EXPECT • expression

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 93


State 74

   44 condition: expression COMP_LE • expression

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 94


State 75

   39 condition: expression COMP_EQ • expression

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 95


State 76

   40 condition: expression COMP_NEQ • expression

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 96


State 77

   41 condition: expression COMP_GT • expression

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 97


State 78

   42 condition: expression COMP_LT • expression

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 98


State 79

   29 expression: expression PLUS • expression

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 99


State 80

   30 expression: expression MINUS • expression

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 100


State 81

   31 expression: expression MULT • expression

    T_ENTIER  shift, and go to state 56
    T_FLOAT   shift, and go to state 57
    T_IDF     shift, and go to state 58

    expression  go to state 101

